// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CButtonClose renders correctly 1`] = `
<button
  aria-label="Close"
  class="close"
  type="button"
>
  ×
</button>
`;

exports[`CButtonClose renders correctly with custom iconHtml 1`] = `
<button
  aria-label="Close"
  class="custom-class"
  disabled="disabled"
  style="color:red"
  type="button"
>
  ok
</button>
`;

exports[`CButtonClose renders correctly with slot 1`] = `
<button
  aria-label="Close"
  class="close"
  type="button"
>
  slot
</button>
`;
